name:                operation-hilbert
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/felixmulder/operation-hilbert#readme
license:             BSD3
license-file:        ../LICENSE
author:              Felix Mulder
maintainer:          felix.mulder@gmail.com
copyright:           Felix Mulder
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable operation-hilbert
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll
